examples/test/testpolicy3337.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3337
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key45: value31
      key7: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value37
          key41: value28
          key25: value18
      podSelector:
        matchLabels:
          key25: value30
